--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Luis Carlos Barco
 description: Reflexiones de un developer cuarentón
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/11350029?s=460&u=d182999d73446c07961b4e9cb5a1a6f557883428&v=4
 
 #
 # Flags below are optional
