--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars3.githubusercontent.com/u/11350029?s=460&u=d182999d73446c
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: lcbarco@okiburi.com
+  email: lcbarco@gmail.com
   facebook:
   flickr:
   github: lcbarco
