--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ avatar: https://avatars3.githubusercontent.com/u/11350029?s=460&u=d182999d73446c
 # Flags below are optional
 #
 
+twitter_username: lcbarco
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
